--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
+                <fragment
+                    android:name="com.example.android.navigation.TitleFragment"
+                    android:id="@+id/titleFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                </fragment>
         </LinearLayout>
 
 </layout>
