--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,10 @@
             android:orientation="vertical">
 
                 <fragment
-                    android:name="com.example.android.navigation.TitleFragment"
-                    android:id="@+id/titleFragment"
+                    app:defaultNavHost="true"
+                    app:navGraph="@navigation/navigation"
+                    android:name="androidx.navigation.fragment.NavHostFragment"
+                    android:id="@+id/myNavHostFragment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                 </fragment>
