--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,19 +17,36 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-                <fragment
-                    app:defaultNavHost="true"
-                    app:navGraph="@navigation/navigation"
-                    android:name="androidx.navigation.fragment.NavHostFragment"
-                    android:id="@+id/myNavHostFragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                </fragment>
+            <fragment
+                android:id="@+id/myNavHostFragment"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:defaultNavHost="true"
+                app:navGraph="@navigation/navigation"></fragment>
         </LinearLayout>
+
+        <com.google.android.material.navigation.NavigationView
+            app:headerLayout="@layout/nav_header"
+            app:menu="@menu/navdrawer_menu"
+            android:id="@+id/navView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start">
+
+        </com.google.android.material.navigation.NavigationView>
+
+    </androidx.drawerlayout.widget.DrawerLayout>
+
 
 </layout>
